# Real-Time-Warehouse-Management-System-Rust

./: Cargo.toml  Documentation.docx  README.md  goods_transportation.rs  inventory_management.rs  main.rs  my_bench.rs  order_processing.rs  rabbitmq.rs
