[package]
name = "wms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.4.2"
scheduled-thread-pool = "0.2.7"
rand = "0.8.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.116"
serde_derive = "1.0"
bma-benchmark = "0.0.24"
criterion = "0.5.1"

[[bench]]
name = "my_bench"
harness = false